# HsDie

./: .ghci  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  DockerFile  HaskellDemo.cabal  HaskellTypeClasses.gv  LICENSE  LICENSE.md  README.md  build.bat  create-package.sh  die.cabal  my.db.sqlite3  package.yaml  stack.yaml  update-apt-repository.sh  update-repository.sh
app/: Main.hs
executable/: Main.hs
packaging/DEBIAN/: config  control  postinst  prerm  templates
src/: HS2019.hs  Lib.hs  Monad.hs  MyMonad.hs  MyMonadMod.hs  Var.hs
test/: Spec.hs
test-suite/: Main.hs
