name:                HaskellDemo
version:             2.0.0.0
synopsis:            Fons ad linguam Haskell demonstrandum.
description:         Vide etiam README.md
homepage:            https://github.com/githubuser/HaskellDemo#readme
license:             MIT
license-file:        LICENSE
author:              Fuszenecker Róbert
maintainer:          Fuszenecker Róbert
copyright:           (C) 2019, Fuszenecker Róbert
category:            Demo
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib,
                       MyMonad,
                       HS2019
  build-depends:       base >= 4.7 && < 5, parallel, monad-par
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

executable HaskellDemo-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, parallel, HaskellDemo

test-suite HaskellDemo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base, parallel
                     , HaskellDemo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/fuszenecker/HaskellDemo
